frontend/src/components/Navbar/Navbar.module.css
.navbar {
  width: 100vw;
  /* sticky */
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1000;
  /* sticky end */
  background-color: var(--secondary-color);
  padding: 10px 20px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
}

.logo {
  display: flex;
  justify-content: center;
}

.logo img {
  height: 60px;
}

.navMenu {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 30px;
  list-style: none;
}

.navMenu li {
  cursor: pointer;
  position: relative;
}

.navMenu li.active {
  border-bottom: 0.3px solid var(--primary-color);
}

.navBtns {
  gap: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.loginBtn {
  background-color: var(--button-bg-color);
  color: #000000;
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  width: 100px;
  font-family: Poppins;
}

.signupBtn {
  background-color: var(--primary-color);
  color: var(--secondary-color);
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  width: 100px;
  font-family: Poppins;
}

/* media queries */

@media screen and (max-width: 955px) {
  .navbar {
    justify-content: space-between;
  }
  /* hamburger */
  .hamburger {
    display: block;
    cursor: pointer;
    margin-left: 10px;
  }
  .bar {
    background-color: var(--text-color);
    width: 20px;
    height: 3px;
    display: block;
    margin: 5px;
    -webkit-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
  }
  /* adding active class to the bars  */
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  .navMenu {
    position: absolute;
    flex-direction: column;
    gap: 0;
    top: 70px;
    left: -100%;
    text-align: start;
    width: 100%;
    transition: 0.7s ease-in-out;
    background-color: var(--secondary-color);
    padding: 10px;
  }
  .navMenu.active {
    left: 0;
  }
  .navMenu li {
    margin: 16px 0;
  }
  .navBtns {
    width: auto;
    gap: 10px;
  }
  .logo img {
    height: 40px;
  }
  .navigations {
    display: flex;
    align-items: center;
  }
  .loginBtn,
  .signupBtn {
    width: 80px;
    padding: 10px;
  }
}

